--- a/src/examples/menu-manual/LAZ/project1.lpi
+++ b/src/examples/menu-manual/LAZ/project1.lpi
@@ -28,29 +28,24 @@
         <FormatVersion Value="1"/>
       </local>
     </RunParams>
-    <RequiredPackages Count="3">
+    <RequiredPackages Count="1">
       <Item1>
         <PackageName Value="LCL"/>
       </Item1>
-      <Item2>
-        <PackageName Value="lp_designtime"/>
-      </Item2>
-      <Item3>
-        <PackageName Value="FCL"/>
-      </Item3>
     </RequiredPackages>
     <Units Count="2">
       <Unit0>
-        <Filename Value="project1.dpr"/>
+        <Filename Value="project1.lpr"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="project1"/>
       </Unit0>
       <Unit1>
-        <Filename Value="unit1.pas"/>
+        <Filename Value="..\unit2.pas"/>
         <IsPartOfProject Value="True"/>
-        <ComponentName Value="lpForm1"/>
+        <ComponentName Value="Form1"/>
         <HasResources Value="True"/>
-        <UnitName Value="Unit1"/>
+        <ResourceBaseClass Value="Form"/>
+        <UnitName Value="Unit2"/>
       </Unit1>
     </Units>
   </ProjectOptions>
@@ -62,6 +57,7 @@
     </Target>
     <SearchPaths>
       <IncludeFiles Value="$(ProjOutDir)"/>
+      <OtherUnitFiles Value=".."/>
       <UnitOutputDirectory Value="lib\$(TargetCPU)-$(TargetOS)"/>
     </SearchPaths>
     <Linking>
