downgrade Lazarus from Trunk(1.3.0) to 1.2.6, but keep compatible with both.

--- a/src/examples/mnutes/mnutest.lpi
+++ b/src/examples/mnutes/mnutest.lpi
@@ -47,6 +47,7 @@
         <IsPartOfProject Value="True"/>
         <ComponentName Value="lpForm2"/>
         <HasResources Value="True"/>
+        <ResourceBaseClass Value="Form"/>
         <UnitName Value="Unit2"/>
       </Unit1>
     </Units>
