--- a/src/examples/manual2/project1.lpi
+++ b/src/examples/manual2/project1.lpi
@@ -46,6 +46,7 @@
         <Filename Value="unit1.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="lpForm1"/>
+        <HasResources Value="True"/>
         <UnitName Value="Unit1"/>
       </Unit1>
     </Units>
